messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
name: messaging-app
namespace: default
spec:
type: ClusterIP
selector:
app: messaging-app
active: "true" # points to blue initially; we'll toggle this label between deployments to switch traffic
ports:
- protocol: TCP
port: 80
targetPort: 8000
